# ChangeLog for games-emulation/bsnes-phoenix
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*bsnes-phoenix-0.079 (04 Jun 2011)

  04 Jun 2011; Michał Ziąbkowski <mziab@o2.pl> -bsnes-phoenix-0.075.ebuild,
  -bsnes-phoenix-0.075-r1.ebuild, -bsnes-phoenix-0.076.ebuild,
  +bsnes-phoenix-0.079.ebuild:
  Bumped. Removed cruft.

*bsnes-phoenix-0.078 (30 Apr 2011)

  30 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +bsnes-phoenix-0.078.ebuild:
  Bumped.

  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> -bsnes-phoenix-0.073.ebuild,
  -bsnes-phoenix-0.074.ebuild, -bsnes-phoenix-0.074_p11.ebuild:
  Removed cruft.

  27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> bsnes-phoenix-0.075-r1.ebuild,
  bsnes-phoenix-0.076.ebuild, bsnes-phoenix-0.077.ebuild:
  Removed EAPI=4 features for now.

*bsnes-phoenix-0.077 (17 Mar 2011)

  17 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +bsnes-phoenix-0.077.ebuild,
  +files/bsnes-phoenix-0.077-makefile.patch:
  Bumped.

*bsnes-phoenix-0.076 (25 Feb 2011)

  25 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +bsnes-phoenix-0.076.ebuild,
  +files/bsnes-phoenix-0.076-toolkit.patch:
  Bumped.

*bsnes-phoenix-0.075-r1 (01 Feb 2011)

  01 Feb 2011; Michał Ziąbkowski <mziab@o2.pl>
  +bsnes-phoenix-0.075-r1.ebuild, +files/bsnes-phoenix-0.075-toolkit.patch:
  Added selectable toolkits and debugger. Ported to EAPI4.

*bsnes-phoenix-0.075 (25 Jan 2011)

  25 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +bsnes-phoenix-0.075.ebuild,
  +files/bsnes-phoenix-0.075-makefile.patch:
  Bumped.

*bsnes-phoenix-0.074_p11 (24 Jan 2011)

  24 Jan 2011; Michał Ziąbkowski <mziab@o2.pl>
  +bsnes-phoenix-0.074_p11.ebuild,
  +files/bsnes-phoenix-0.074_p11-makefile.patch:
  Bumped.

  11 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Added new flags to metadata.xml.

  11 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> bsnes-phoenix-0.074.ebuild:
  Added flags for profile selection. The compatibility core is used by default.
