@@ -8,8 +8,10 @@ AUX bsnes-phoenix-0.077-makefile.patch 1369 RMD160 5c05c6f132c0c77e1206d0e96ee26
 DIST bsnes_v077-source.tar.bz2 626689 RMD160 45beb2be9f27dce27ff8e6c0a57533bad1ff107f SHA1 f126ae565ffb2a6de00688bdbf83b36abae53a1f SHA256 7cdbde2bf3f9298bba16f185a071ff667e10e48523f77c1cda5f404b86188cfe
 DIST bsnes_v078-source.tar.bz2 649318 RMD160 bb420e381ab694c84518d2ae5d6ba3fa35238594 SHA1 f21828589c21ce3da9394ee196c16864bb35cff1 SHA256 97e859874e70626e4f3b572da2850f6c69558105d0a50a20904a50a0bdae0c7d
 DIST bsnes_v079-source.tar.bz2 679564 RMD160 8e91e981f49e8ce0ac81c492a7d264dbee9f8329 SHA1 ac26802f80db0b1c696df4d5d67396523f6f5726 SHA256 f477da2afb34bed556c3930b0baf1cb2f0d320811f8c0b0a67ba9abd138f522f
+DIST bsnes_v080-source.tar.bz2 676126 RMD160 5816a96e42de95c4572f7ac849fa80788ea080c3 SHA1 111d9771a86aafaf4606b2540eea645dddcdf24e SHA256 ac499e92eaf37fee7096d0656c3fd0ac49417e905a52e5a0c98393f28de82f7e
 EBUILD bsnes-phoenix-0.077.ebuild 2523 RMD160 827e4ab70d7a4ba8cb0e4d539f61c0b1ec8643ec SHA1 bbc72fa087eb75707190f1270e3250ac9bbce07f SHA256 224830821b2fa5735ed9c467504710b3abd47118621720a78da0fb7ccfa147c6
 EBUILD bsnes-phoenix-0.078.ebuild 2523 RMD160 827e4ab70d7a4ba8cb0e4d539f61c0b1ec8643ec SHA1 bbc72fa087eb75707190f1270e3250ac9bbce07f SHA256 224830821b2fa5735ed9c467504710b3abd47118621720a78da0fb7ccfa147c6
 EBUILD bsnes-phoenix-0.079.ebuild 2523 RMD160 827e4ab70d7a4ba8cb0e4d539f61c0b1ec8643ec SHA1 bbc72fa087eb75707190f1270e3250ac9bbce07f SHA256 224830821b2fa5735ed9c467504710b3abd47118621720a78da0fb7ccfa147c6
-MISC ChangeLog 2571 RMD160 ec59f33fed121626a8241ad9b3719875b5ce245f SHA1 4eae40af6a19b57257453b86d5b5dd5949e960d6 SHA256 42de332cf6acb2baa892ca4514b5fc923586126e716ae8fa3b29ca03884c9cb9
+EBUILD bsnes-phoenix-0.080.ebuild 2523 RMD160 827e4ab70d7a4ba8cb0e4d539f61c0b1ec8643ec SHA1 bbc72fa087eb75707190f1270e3250ac9bbce07f SHA256 224830821b2fa5735ed9c467504710b3abd47118621720a78da0fb7ccfa147c6
+MISC ChangeLog 2696 RMD160 d9c961c6321d87918affa4be93e0728455a60729 SHA1 7dedd0d6b64f23818a132f9012255ef53881cd5f SHA256 b3b929d82bc05e6df578d50f1e7c35cd1b65a7029b60e72d631ffbae7c27cee7
 MISC metadata.xml 558 RMD160 64d6289cdbef90cff30b1f6ec8895842e9c56700 SHA1 0c569c5160067bd2c587be3f456fe85a3898a07d SHA256 9e20506bb01b8bbef63e5afdba0f7b5401efa0f91bdef2299881c984cc64d640
