@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*bsnes-phoenix-0.080 (03 Jul 2011)
+
+  03 Jul 2011; Michał Ziąbkowski <mziab@o2.pl> +bsnes-phoenix-0.080.ebuild:
+  Bumped.
+
 *bsnes-phoenix-0.079 (04 Jun 2011)
 
   04 Jun 2011; Michał Ziąbkowski <mziab@o2.pl> -bsnes-phoenix-0.075.ebuild,
